Changed code according to PEP8

--- a/Car_Price_Estimation.ipynb
+++ b/Car_Price_Estimation.ipynb
@@ -40,20 +40,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
     "import warnings\n",
-    "import sklearn\n",
     "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
     "from sklearn.metrics import mean_squared_error as mse\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "import lightgbm as lgb\n",
-    "import time"
+    "\n",
+    "import lightgbm as lgb\n"
    ]
   },
   {
@@ -339,7 +341,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('/datasets/autos.csv', parse_dates = [0, 12, 15])\n",
+    "df = pd.read_csv(r'C:\\Users\\dkiro\\Desktop\\проект\\autos.csv', parse_dates = [0, 12, 15])\n",
     "df.head(10)"
    ]
   },
@@ -531,7 +533,7 @@
    ],
    "source": [
     "missings = pd.DataFrame(df.isna().sum())\n",
-    "missings['%'] = round(missings / len(df) * 100, 2)\n",
+    "missings['%'] = round(missings/len(df) * 100, 2)\n",
     "missings"
    ]
   },
@@ -575,7 +577,13 @@
    },
    "outputs": [],
    "source": [
-    "missing_vars = ['vehicletype', 'gearbox', 'model', 'fueltype', 'notrepaired'] # переменные с пропуском \n",
+    "missing_vars = [\n",
+    "    'vehicletype',\n",
+    "    'gearbox',\n",
+    "    'model',\n",
+    "    'fueltype',\n",
+    "    'notrepaired',\n",
+    "] \n",
     "\n",
     "for var in missing_vars:\n",
     "    df[var] = df[var].fillna('unknown')"
@@ -653,7 +661,7 @@
     "    sns.set(style=\"ticks\")\n",
     "\n",
     "    f, (ax_box, ax_hist) = plt.subplots(2, sharex=True, \n",
-    "                                                gridspec_kw={\"height_ratios\": (.85, 1.85)})\n",
+    "                                        gridspec_kw={\"height_ratios\": (.85, 1.85)})\n",
     "\n",
     "    sns.boxplot(df[var], ax=ax_box)\n",
     "    sns.distplot(df[var], ax=ax_hist)\n",
@@ -732,7 +740,7 @@
     "\n",
     "df = df[df['price'] <= 18000]\n",
     "df = df[df['kilometer'] >= 50000]\n",
-    "perc = round((1 - len(df)  / NUM_OF_OBS) * 100, 2)\n",
+    "perc = round((1-len(df)/NUM_OF_OBS) * 100, 2)\n",
     "print(f'Удалено {perc}% от изначального количества наблюдений')"
    ]
   },
@@ -801,7 +809,7 @@
     }
    ],
    "source": [
-    "deleted_ratio = 1 - len(df) / NUM_OF_OBS \n",
+    "deleted_ratio = 1-len(df) / NUM_OF_OBS \n",
     "\n",
     "print(f'Всего из таблицы удалено {round(deleted_ratio, 3) * 100}%')"
    ]
@@ -907,8 +915,9 @@
    "outputs": [],
    "source": [
     "# Столбцы с датами также не особо информативны, поэтому не будем включать их в признаки\n",
+    "X_train = df_train.drop(['price', 'datecrawled', 'lastseen', 'datecreated'], axis=1)\n",
+    "X_test =  df_test.drop(['price', 'datecrawled', 'lastseen', 'datecreated'], axis=1)\n",
     "\n",
-    "X_train, X_test = df_train.drop(['price','datecrawled','lastseen', 'datecreated'], axis = 1), df_test.drop(['price','datecrawled','lastseen', 'datecreated'], axis = 1)\n",
     "y_train, y_test = df_train.price, df_test.price"
    ]
   },
@@ -927,7 +936,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test = pd.get_dummies(X_train, columns = categ, drop_first = True), pd.get_dummies( X_test, columns = categ, drop_first = True)"
+    "X_train = pd.get_dummies(X_train, columns = categ, drop_first = True)\n",
+    "X_test = pd.get_dummies( X_test, columns = categ, drop_first = True)"
    ]
   },
   {
@@ -971,53 +981,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Время обучения модели:  5.52\n"
+      "Время обучения линейной регрессии:  9.56\n"
      ]
     }
    ],
    "source": [
     "start = time.time()\n",
-    "\n",
     "lr = LinearRegression()\n",
     "lr.fit(X_train, y_train)\n",
-    "\n",
     "end = time.time()\n",
     "\n",
-    "\n",
     "fit_time_lr = round(end - start, 2)\n",
+    "\n",
     "print(\"Время обучения линейной регрессии: \" , round(fit_time_lr, 2)) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Время предсказания линейной регрессии:  0.13\n",
+      "Время предсказания линейной регрессии:  0.23\n",
       "RMSE на тестовой выборке составляет: 0.65\n"
      ]
     }
    ],
    "source": [
     "start = time.time()\n",
-    "\n",
     "pred_lr = lr.predict(X_test)\n",
-    "\n",
     "end = time.time()\n",
     "\n",
     "pred_lr_time = round(end - start, 2)\n",
     "rmse_lr_test = round(mse(y_test, pred_lr) ** 0.5, 2)\n",
+    "\n",
     "print(\"Время предсказания линейной регрессии: \" , round(pred_lr_time, 2)) \n",
     "print(\"RMSE на тестовой выборке составляет:\", rmse_lr_test )"
    ]
@@ -1033,34 +1040,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "dtr = DecisionTreeRegressor(random_state = 123)\n",
     "\n",
-    "parametrs = { 'max_depth': range (3,13, 2)}\n",
-    "grid = GridSearchCV(dtr, parametrs, scoring = 'neg_mean_squared_error', cv=5)"
+    "parametrs = {\n",
+    "    'max_depth': range (3,13, 2), \n",
+    "}\n",
+    "grid = GridSearchCV(dtr,\n",
+    "                    parametrs,\n",
+    "                    scoring = 'neg_mean_squared_error',\n",
+    "                    cv=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Время обучения дерева решений составляет 106.87\n"
+      "Время обучения дерева решений составляет 112.0\n"
      ]
     }
    ],
    "source": [
     "start_time = time.time()\n",
-    "\n",
     "grid.fit(X_train, y_train)\n",
-    "\n",
     "end_time = time.time()\n",
     "\n",
     "fit_time_dtr = end_time - start_time\n",
@@ -1070,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1104,13 +1114,12 @@
    ],
    "source": [
     "start_time = time.time()\n",
-    "\n",
     "pred_dtr = grid.predict(X_test)\n",
-    "\n",
     "end_time = time.time()\n",
     "\n",
     "pred_dtr_time = end_time - start_time \n",
     "rmse_dtr_test = round(mse(y_test, pred_dtr) **0.5, 2)\n",
+    "\n",
     "print('Время предсказания дерева решений:', round(pred_dtr_time, 2))\n",
     "print(\"RMSE на тестовой выборке составляет:\", rmse_dtr_test )"
    ]
@@ -1125,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,22 +1143,25 @@
     "\n",
     "params = {\n",
     "    'max_depth': [7, 11],\n",
-    "    'learning_rate': [0.01, 0.1]\n",
+    "    'learning_rate': [0.01, 0.1],\n",
     "}\n",
     "\n",
-    "grid_gb = GridSearchCV(gb, params, scoring = 'neg_mean_squared_error', cv=5)"
+    "grid_gb = GridSearchCV(gb,\n",
+    "                       params,\n",
+    "                       scoring = 'neg_mean_squared_error',\n",
+    "                       cv=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Время обучения модели градиентного бустинга: 24.34\n"
+      "Время обучения модели градиентного бустинга: 24.85\n"
      ]
     }
    ],
@@ -1165,14 +1177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Oценка качества градиентного бустинга путем кросс-валидации 0.396\n",
+      "Oценка качества градиентного бустинга путем кросс-валидации: 0.396\n",
       "Лучшие параметры модели: {'learning_rate': 0.1, 'max_depth': 11}\n"
      ]
     }
@@ -1192,14 +1204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Время предсказания модели градиентного бустинга: 0.19\n"
+      "Время предсказания модели градиентного бустинга: 0.26\n"
      ]
     }
    ],
@@ -1215,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1234,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1266,20 +1278,20 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>linear regression</th>\n",
-       "      <td>5.520000</td>\n",
-       "      <td>0.130000</td>\n",
+       "      <td>9.560000</td>\n",
+       "      <td>0.23000</td>\n",
        "      <td>0.650000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>decision tree</th>\n",
-       "      <td>106.873522</td>\n",
-       "      <td>0.186301</td>\n",
+       "      <td>112.002949</td>\n",
+       "      <td>0.19198</td>\n",
        "      <td>0.480000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>gradient boosting</th>\n",
-       "      <td>24.340000</td>\n",
-       "      <td>0.190000</td>\n",
+       "      <td>24.850000</td>\n",
+       "      <td>0.26000</td>\n",
        "      <td>0.398418</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1288,21 +1300,25 @@
       ],
       "text/plain": [
        "                     fit_time  prediction_time  RMSE_test\n",
-       "linear regression    5.520000         0.130000   0.650000\n",
-       "decision tree      106.873522         0.186301   0.480000\n",
-       "gradient boosting   24.340000         0.190000   0.398418"
+       "linear regression    9.560000          0.23000   0.650000\n",
+       "decision tree      112.002949          0.19198   0.480000\n",
+       "gradient boosting   24.850000          0.26000   0.398418"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "overall_tab = pd.DataFrame({'fit_time': [fit_time_lr, fit_time_dtr, fit_time_gb], \n",
-    "                           'prediction_time': [pred_lr_time, pred_dtr_time, pred_gb_time],\n",
-    "                           'RMSE_test': [rmse_lr_test, rmse_dtr_test, test_rmse_gb]}, \n",
-    "                           index = ['linear regression', 'decision tree', 'gradient boosting'])\n",
+    "overall_tab = pd.DataFrame(\n",
+    "    {\n",
+    "        'fit_time': [fit_time_lr, fit_time_dtr, fit_time_gb],\n",
+    "        'prediction_time': [pred_lr_time, pred_dtr_time, pred_gb_time],\n",
+    "        'RMSE_test': [rmse_lr_test, rmse_dtr_test, test_rmse_gb],\n",
+    "    },\n",
+    "    index=['linear regression', 'decision tree', 'gradient boosting'])\n",
+    "\n",
     "overall_tab"
    ]
   },
@@ -1314,7 +1330,7 @@
     "\n",
     "Цель проекта - построение качественной модели, которая могла бы прогнозировать рыночную стоимость автомобиля. Для начала мы сделали предобработку исходных данных, заполнив пропуски и почистив датасет от выбросов. Кроме этого мы стандартизировали данные и добавили дамми-столбцы для категориальных переменных. \n",
     "\n",
-    "Мы проверили 3 модели: линейную регрессию, дерево решений и градиентный бустинг. Наиболее быстрой в обучении оказалась модель линейной регрессии: время подгонки - 5.5 секунд, а наиболее медленной оказалась модель решающего дерева: время подгонки составило 106 секунд. Время предсказания наибольшее (0.19 сек.) у модели градиентного бустинга, наименьшее (0.13 сек) - у линейной регрессии. Однако наименьший RMSE на тестовой выборке показала модель градиентного бустинга, а наименьшее, наоборот - линейная регрессия (0.39 против 0.65). Таким образом, с учетом скорости подгонки модели и метрики RMSE модель градиентного бустинга является наилучшей. Итоговые показатели качества моделей можно найти в таблице overall_tab.\n"
+    "Мы проверили 3 модели: линейную регрессию, дерево решений и градиентный бустинг. Наиболее быстрой в обучении оказалась модель линейной регрессии: время подгонки - 9.5 секунд, а наиболее медленной оказалась модель решающего дерева: время подгонки составило 112 секунд. Время предсказания наибольшее (0.19 сек.) у модели градиентного бустинга, наименьшее (0.13 сек) - у линейной регрессии. Однако наименьший RMSE на тестовой выборке показала модель градиентного бустинга, а наименьшее, наоборот - линейная регрессия (0.39 против 0.65). Таким образом, с учетом скорости подгонки модели и метрики RMSE модель градиентного бустинга является наилучшей. Итоговые показатели качества моделей можно найти в таблице overall_tab.\n"
    ]
   }
  ],
