--- a/Car_Price_Estimation.ipynb
+++ b/Car_Price_Estimation.ipynb
@@ -341,7 +341,8 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r'C:\\Users\\dkiro\\Desktop\\проект\\autos.csv', parse_dates = [0, 12, 15])\n",
+    "df = pd.read_csv(r'C:\\Users\\dkiro\\Desktop\\проект\\autos.csv',\n",
+    "                 parse_dates = [0, 12, 15])\n",
     "df.head(10)"
    ]
   },
@@ -633,7 +634,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop('numberofpictures', axis = 1) # неинформативный столбец, одно нулевое значение\n"
+    "df = df.drop('numberofpictures', axis=1) # неинформативный столбец, одно нулевое значение\n"
    ]
   },
   {
@@ -891,7 +892,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train, df_test = train_test_split(df, test_size = 0.25, random_state = 123)"
+    "df_train, df_test = train_test_split(df, test_size=0.25, random_state=123)"
    ]
   },
   {
@@ -915,8 +916,11 @@
    "outputs": [],
    "source": [
     "# Столбцы с датами также не особо информативны, поэтому не будем включать их в признаки\n",
-    "X_train = df_train.drop(['price', 'datecrawled', 'lastseen', 'datecreated'], axis=1)\n",
-    "X_test =  df_test.drop(['price', 'datecrawled', 'lastseen', 'datecreated'], axis=1)\n",
+    "X_train = df_train.drop(['price', 'datecrawled', 'lastseen', 'datecreated'],\n",
+    "                        axis=1)\n",
+    "\n",
+    "X_test =  df_test.drop(['price', 'datecrawled', 'lastseen', 'datecreated'],\n",
+    "                       axis=1)\n",
     "\n",
     "y_train, y_test = df_train.price, df_test.price"
    ]
@@ -936,8 +940,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = pd.get_dummies(X_train, columns = categ, drop_first = True)\n",
-    "X_test = pd.get_dummies( X_test, columns = categ, drop_first = True)"
+    "X_train = pd.get_dummies(X_train, columns=categ, drop_first=True)\n",
+    "X_test = pd.get_dummies( X_test, columns=categ, drop_first=True)"
    ]
   },
   {
@@ -1051,7 +1055,7 @@
     "}\n",
     "grid = GridSearchCV(dtr,\n",
     "                    parametrs,\n",
-    "                    scoring = 'neg_mean_squared_error',\n",
+    "                    scoring='neg_mean_squared_error',\n",
     "                    cv=5)"
    ]
   },
@@ -1138,7 +1142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gb = lgb.LGBMRegressor(random_state = 123)\n",
+    "gb = lgb.LGBMRegressor(random_state=123)\n",
     "\n",
     "\n",
     "params = {\n",
@@ -1148,7 +1152,7 @@
     "\n",
     "grid_gb = GridSearchCV(gb,\n",
     "                       params,\n",
-    "                       scoring = 'neg_mean_squared_error',\n",
+    "                       scoring='neg_mean_squared_error',\n",
     "                       cv=5)"
    ]
   },
